<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="designtest.davidweik.votieraufgabe9.NutzerDatenEingabe">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/top_nutzerdateneingabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/nutzer_daten_einleitung"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/datum_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_nutzerdateneingabe"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/friste_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/datum_von"
                android:inputType="date" />

            <EditText
                android:id="@+id/second_date"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/datum_bis" />

        </LinearLayout>

        <EditText
            android:id="@+id/target_country"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/datum_layout"
            android:layout_margin="16dp"
            android:hint="@string/target_country" />

        <LinearLayout
            android:id="@+id/number_of_things"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/target_country"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number_adults"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/erwachsene"
                android:inputType="number" />

            <EditText
                android:id="@+id/number_kids"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/kinder"
                android:inputType="number" />

            <EditText
                android:id="@+id/number_pets"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/tiere"
                android:inputType="number" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/price_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_of_things"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/min_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/preis_min"
                android:inputType="number" />

            <EditText
                android:id="@+id/max_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:hint="@string/preis_max"
                android:inputType="number" />
        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_range"
            android:layout_margin="16dp"
            android:layout_marginBottom="0dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/email"
            android:layout_marginRight="16dp"
            android:hint="@string/weiter"
            android:onClick="nutzerDatenAnzeigen"/>

    </RelativeLayout>

</ScrollView>